# incident-cast

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  architecture_diagram.md  pyproject.toml
data/cases/: cloud_run_secret_loss.yaml
data/fixtures/cloud_run_secret_loss/: access_audit_denials_by_principal.json  access_iam_changes_in_window.json  access_policy_changes_for_affected_resources.json  (+12 more)
data/incidents/: example.yaml
incidentcast/: __init__.py  aggregator.py  cli.py  deck.py  orchestrator.py  replay.py
incidentcast/specialists/: access.py  base.py  blast_radius.py  deployment.py  reliability.py  runtime.py
incidentcast/splunk/: fixture_client.py  interface.py  mcp_client.py  sdk_client.py
scripts/: demo.sh  refresh_fixtures.py  setup_splunk.sh  setup_splunk_mcp.sh  splunk_admin.py
tests/: test_aggregator.py  test_backend.py  test_repertoire_ownership.py  test_replay.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ActivityFeed.tsx  CasePictureButton.tsx  ChoicePrompt.tsx  ConvergeOverlay.tsx  CurrentPicture.tsx  DeckHeader.tsx  DeckView.tsx  DemoControls.tsx  EvidenceChip.tsx  EvidenceDrawer.tsx  InvestigationStage.tsx  InvestigationStatus.tsx  InvestigationWorkspace.tsx  LiveSplunkEvidence.tsx  ReviewPrompts.tsx  SettingsMenu.tsx  SharedEvidenceCard.tsx  SharedTimeline.tsx  SpecialistSection.tsx  TheoryStrip.tsx
web/lib/: admin.ts  caseStatus.ts  caseTrail.ts  deck.ts  discoveries.ts  replay.ts  splunkEvidence.ts  splunkLink.ts
(+12 files in other folders)
