[project]
name = "incidentcast"
version = "0.1.0"
description = "AI incident room: four Splunk-powered specialist agents investigate an incident in parallel and produce a narrated, evidence-cited deck."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "IncidentCast" }]

dependencies = [
    "google-genai>=0.1.1",
    "mcp>=0.1.0",
    "anthropic>=0.85.0",
    "claude-agent-sdk>=0.2.87",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    # Real Splunk integration (M2). Optional to keep M1 install light.
    # "splunk-sdk>=2.0",
]

[project.optional-dependencies]
splunk = ["splunk-sdk>=2.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
incidentcast = "incidentcast.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incidentcast"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
